giving name for async function

--- a/clientside/index.html
+++ b/clientside/index.html
@@ -13,7 +13,7 @@
     <title>Task Manager</title>
 </head>
 
-<body class="content border-left border-right" onload="taskFetcher()">
+<body class="content border-left border-right" onload="getTaskFromDb()">
 
     <!-- Sidebar/menu -->
     <nav class="my-sidebar my-light-grey my-collapse my-top" style="z-index:3;width:260px" id="mySidebar">
