--- a/clientside/index.html
+++ b/clientside/index.html
@@ -53,7 +53,7 @@
     <!-- Top menu on small screens -->
     <header class="my-bar my-top my-hide-large my-black my-xlarge">
         <span class="my-bar-item">more options here:-</span>
-        <a href="javascript:void(0)" class="my-right my-bar-item my-button" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+        <a href="javascript:void(0)" class="my-right my-bar-item my-button" onclick="my_open()"><i class="fa fa-bars"></i></a>
     </header>
 
     <!-- Overlay effect when opening sidebar on small screens -->
